<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <TextView
        android:id="@+id/sensor_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor_name_label" />

    <TextView
        android:id="@+id/orientation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orientation"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor_name" />

    <TextView
        android:id="@+id/orientation_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientation_label" />

    <TextView
        android:id="@+id/free_acc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_acc"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orientation_data" />

    <TextView
        android:id="@+id/free_acc_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_acc_label" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/free_acc_data" />

    <LinearLayout
        android:id="@+id/spinnerWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view">



        <TextView
            android:id="@+id/participantIdTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participant_id"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Spinner
            android:id="@+id/participantSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/participants"/>

        <TextView
            android:id="@+id/environmentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/environment"
            android:textAlignment="center"
            android:textSize="36sp" />

        <Spinner
            android:id="@+id/environmentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
        <TextView
            android:id="@+id/taskOrderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_order"
            android:textAlignment="center"
            android:textSize="36sp"
            />

        <Spinner
            android:id="@+id/taskOrderSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            style="?android:attr/progressBarStyleHorizontal"-->
<!--            android:layout_width="413dp"-->
<!--            android:layout_height="29dp" />-->

<!--<Button-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:text="ANAN" />-->
    </LinearLayout>

    <GridLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/start_button"
            android:layout_width="149dp"
            android:layout_height="56dp"
            android:text="@string/start"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:id="@+id/previous_button"
            android:layout_width="149dp"
            android:layout_height="56dp"
            android:text="@string/previous"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity=""/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="149dp"
            android:layout_height="56dp"
            android:text="@string/stop"
            android:layout_row="2"
            android:layout_column="1"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="149dp"
            android:layout_height="56dp"
            android:text="@string/next"
            android:layout_row="1"
            android:layout_column="2"
       />
    </GridLayout>
    <TextView
        android:id="@+id/information_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_connected"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>